--- a/src/components/HobbyDesc/HobbyDesc.css
+++ b/src/components/HobbyDesc/HobbyDesc.css
@@ -1,5 +1,4 @@
 .hobby-section {
-  /* height: 100vh; */
   padding-bottom: 10vh;
   background-color: #f44336;
 }
@@ -19,7 +18,7 @@
 }
 
 .hobby-card {
-  height:375px;
+  height: 30rem;
   margin: 5px;
 }
 
