--- a/src/components/IntroBanner/IntroBanner.css
+++ b/src/components/IntroBanner/IntroBanner.css
@@ -1,6 +1,5 @@
 .intro-container {
   position: relative;
-  width: 100vw;
   height:70vh;
   overflow: hidden;
 }
