--- a/src/components/ProfileDesc/ProfileDesc.css
+++ b/src/components/ProfileDesc/ProfileDesc.css
@@ -1,5 +1,5 @@
 .profile-desc {
   margin-top: auto;
   color: white;
-  margin-bottom: 2vh;
+  margin-bottom: 5vh;
 }
